[gd_scene load_steps=12 format=3 uid="uid://dt04o3hxkq6dk"]

[ext_resource type="Script" path="res://Scripts/FirstPersonController.gd" id="1_4sgls"]
[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_u7m3g"]
[ext_resource type="PackedScene" uid="uid://cuqtayu56oev5" path="res://Levels/Level1.tscn" id="2_46h3a"]
[ext_resource type="PackedScene" uid="uid://wi34tis5pbj" path="res://UI Scenes/FinalMenu.tscn" id="3_5i10f"]
[ext_resource type="AudioStream" uid="uid://dbi63iktvevvi" path="res://Audio/732872__szegvari__mechanical-machinery-technology.wav" id="5_j4tv0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1o78"]

[sub_resource type="Sky" id="Sky_j4m27"]
sky_material = SubResource("ShaderMaterial_y1o78")

[sub_resource type="Environment" id="Environment_4yhfw"]
background_mode = 1
background_color = Color(0.294118, 0.541176, 0.843137, 1)
sky = SubResource("Sky_j4m27")
ambient_light_color = Color(0.631373, 0.705882, 0.882353, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w2qqo"]
albedo_color = Color(0.156863, 0.164706, 0.0392157, 0.941176)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7icke"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ao2x3"]

[node name="Game" type="Node3D"]
script = ExtResource("1_u7m3g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.633489, 0.773752, 0, -0.773752, 0.633489, 0, 13.6249, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4yhfw")

[node name="World" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0190232, 1.08699, -0.000953436)
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_w2qqo")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.416775, -2.94122, 1.55524)
script = ExtResource("1_4sgls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.40465, 0)
shape = SubResource("CapsuleShape3D_7icke")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.70067, 0)
mesh = SubResource("CapsuleMesh_ao2x3")

[node name="Neck" type="Node3D" parent="Player"]

[node name="Camera3D" type="Camera3D" parent="Player/Neck"]
transform = Transform3D(-0.907777, 0, 0.419452, 0, 1, 0, -0.419452, 0, -0.907777, 0.044776, 7.20271, 0.206961)

[node name="Level1" parent="." instance=ExtResource("2_46h3a")]

[node name="FinalMenu" parent="." instance=ExtResource("3_5i10f")]
visible = false

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_j4tv0")
autoplay = true

[connection signal="level_completed" from="Level1" to="." method="_on_level_1_level_completed"]
[connection signal="retried" from="FinalMenu" to="." method="_on_final_menu_retried"]
